--- a/UebungMVC_V10/Views/Data/Index.cshtml
+++ b/UebungMVC_V10/Views/Data/Index.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.EndeDateTime)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.AbstandDateTimeText)
+            @Html.DisplayFor(modelItem => item.AbstandDateTimeText) Tage
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.DatumID }) |
